--- a/package.json
+++ b/package.json
@@ -2,15 +2,16 @@
   "name": "zju-live-better",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": {
-  },
+  "scripts": {},
   "type": "module",
   "keywords": [],
   "author": "",
   "license": "GPL-3.0-only",
   "dependencies": {
     "@inquirer/prompts": "^7.2.1",
+    "axios": "^1.12.2",
     "chalk": "^5.3.0",
+    "cheerio": "^1.1.2",
     "cli-progress": "^3.12.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
