--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
   "author": "",
   "license": "GPL-3.0-only",
   "dependencies": {
-    "@inquirer/prompts": "^7.10.1",
     "axios": "^1.13.2",
     "chalk": "^5.6.2",
     "cheerio": "^1.1.2",
@@ -16,6 +15,7 @@
     "dotenv": "^16.6.1",
     "express": "^4.21.2",
     "inquirer": "^12.11.1",
+    "login-zju": "^1.0.5",
     "uuid": "^11.1.0"
   },
   "description": ""
