feat: add DingTalk notification support for auto sign-in events

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,6 @@
 ZJU_USERNAME=3240100000
 ZJU_PASSWORD=your_passw0rd
+
+# For DingTalk notification
+DINGTALK_WEBHOOK="https://oapi.dingtalk.com/robot/send?access_token=your_access_token"
+DINGTALK_SECRET="SECyour_secret_token"
