--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
 ZJU_USERNAME=3240100000
 ZJU_PASSWORD=your_passw0rd
 
-# For DingTalk notification
+
+# For DingTalk notification(Optional)
+ENABLE_DINGTALK=true
 DINGTALK_WEBHOOK="https://oapi.dingtalk.com/robot/send?access_token=your_access_token"
 DINGTALK_SECRET="SECyour_secret_token"
