feat: Update behavior of send message

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,6 @@ ZJU_PASSWORD=your_passw0rd
 
 
 # For DingTalk notification(Optional)
-ENABLE_DINGTALK=true
+ENABLE_DINGTALK=true # set to anything except "true" to disable
 DINGTALK_WEBHOOK="https://oapi.dingtalk.com/robot/send?access_token=your_access_token"
 DINGTALK_SECRET="SECyour_secret_token"
