[Add] New tool: generateCourseMd

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "dotenv": "^16.6.1",
     "express": "^4.21.2",
     "inquirer": "^12.11.1",
-    "login-zju": "^1.0.5",
+    "login-zju": "link:E:/Projects/login-ZJU",
     "uuid": "^11.1.0"
   },
   "description": ""
