[fix] Update a stupit mistake in package.json

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "dotenv": "^16.6.1",
     "express": "^4.21.2",
     "inquirer": "^12.11.1",
-    "login-zju": "link:E:/Projects/login-ZJU",
+    "login-zju": "^1.0.6",
     "uuid": "^11.1.0"
   },
   "description": ""
